--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_roll_no">Enter Roll No</string>
     <string name="phone_no">Phone No</string>
     <string name="enter_password">Enter Password</string>
+    <string name="enter_email">Enter Email</string>
     <string name="login">Login</string>
     <string name="spinner_title">spinner_title</string>
     <string name="txtName">Niranjan</string>
@@ -14,9 +15,9 @@
     <string name="assignments">assignmrnt</string>
     <string name="book">book</string>
     <string name="assignment">assignmrnt</string>
-    <string name="grpchats">Chats</string>
     <string name="chat">chat</string>
     <string name="time">time</string>
     <string name="practical">practical</string>
-
+    <string name="Reg">ADD</string>
+    <string name="grpchats">chats</string>
 </resources>
