errors login-user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="msc_it2">MSc IT2</string>
     <string name="profile">profile</string>
     <string name="notes">notes</string>
-    <string name="assignments">assignmrnt</string>
+    <string name="assignments">assignment</string>
     <string name="book">book</string>
-    <string name="assignment">assignmrnt</string>
+    <string name="assignment">assignment</string>
     <string name="chat">chat</string>
     <string name="time">time</string>
     <string name="practical">practical</string>
