--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,10 @@
     <string name="enter_email">Enter Email</string>
     <string name="login">Login</string>
     <string name="spinner_title">spinner_title</string>
-    <string name="txtName">Niranjan</string>
+    <string name="txtName">Name Name</string>
     <string name="msc_it2">MSc IT2</string>
     <string name="profile">profile</string>
-    <string name="notes">notes</string>
+    <string name="notes">Notes</string>
     <string name="assignments">assignment</string>
     <string name="book">book</string>
     <string name="assignment">assignment</string>
@@ -19,5 +19,29 @@
     <string name="time">time</string>
     <string name="practical">practical</string>
     <string name="Reg">ADD</string>
+    <string name="remember">Remember Me</string>
     <string name="grpchats">chats</string>
+    <string name="upload">Upload File</string>
+    <string name="filename">Enter File Name</string>
+    <string name="select">Select File</string>
+
+    <string name="mscIt">Msc It </string>
+    <string name="bscIt">Bsc It </string>
+    <string name="sem1">Semester 1 </string>
+    <string name="sem2">Semester 2 </string>
+    <string name="sem3">Semester 3 </string>
+    <string name="sem4">Semester 4 </string>
+    <string name="sem5">Semester 5 </string>
+    <string name="sem6">Semester 6 </string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+
 </resources>
