--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="Reg">ADD</string>
     <string name="remember">Remember Me</string>
     <string name="grpChats">chats</string>
+    <string name="chat_bot">Chatbot</string>
     <string name="upload">Upload File</string>
     <string name="selectImage">Select Image</string>
     <string name="upload_event">Upload Event</string>
@@ -62,5 +63,12 @@
     <string name="stream">Stream</string>
     <string name="myClass">My Class</string>
     <string name="logout">Logout</string>
+    <string name="welcome">Welcome</string>
+    <string name="add_student">Add Student</string>
+    <string name="tech_reg">Add Teacher</string>
+    <string name="add_teacher">Add Teacher</string>
+    <string name="admin">Admin</string>
+    <string name="typeMsg">Type a message</string>
+    <string name="grpName">Enter Group Name</string>
 
 </resources>
