--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,15 @@
     <string name="feedback">Send Feedback</string>
     <string name="calender">calender</string>
     <string name="select_date">Select Date</string>
+    <string name="send">send</string>
+    <string name="group_chat">Group Chat</string>
+    <string name="events">Events</string>
+    <string name="website">Website</string>
+    <string name="syllabus">Syllabus</string>
+    <string name="practicals">Practicals</string>
+    <string name="blackbook">Black Book</string>
+    <string name="videoNotes">Video Notes</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="enter_name_or_roll_no">Enter Name or Roll No.</string>
 
 </resources>
